# youtube-mcp

./: .gitignore  ALGORITHM.md  CLAUDE.md  README.md  claude_desktop_config.json  pyproject.toml  requirements.txt  run_server.bat  run_server.ps1  start_mcp.cmd  test_server.py
src/: __init__.py  cli.py  discovery.py  memory.py  output.py  playlist.py  rag.py  server.py  summarizer.py  transcript.py  url_parser.py  youtube_api.py
